[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
pretty_assertions = { version = "1", optional = true }

[dev-dependencies]
pretty_assertions = "1"
criterion = "0.8.1"

[[bench]]
name = "bench_days"
harness = false

[lib]
name = "aoc2025"
path = "src/lib.rs"